fix(client): restore age/gender fields, profile prefill+save guard, always-visible chat errors, a11y and spec fixes

--- a/client/src/components/CustomAlert/CustomAlert.scss
+++ b/client/src/components/CustomAlert/CustomAlert.scss
@@ -9,7 +9,7 @@
 
     &--danger {
         background: $danger-soft;
-        color: $danger;
+        color: $danger-deep;
     }
 
     &--success {
