--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -64,6 +64,9 @@
 
     &__fields {
         margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
     }
 
     &__label {
@@ -81,6 +84,12 @@
     &__input {
         @include input-pill;
         flex: 1;
+    }
+
+    &__select {
+        @include input-pill;
+        flex: 1;
+        cursor: pointer;
     }
 
     &__save {
