--- a/client/src/styles/_tokens.scss
+++ b/client/src/styles/_tokens.scss
@@ -28,6 +28,7 @@ $amber-soft: #fef3c7;
 // Status
 $success: #059669;
 $danger: #dc2626;
+$danger-deep: #b91c1c;
 $danger-soft: #fee2e2;
 
 // Radar
